# robin

./: CMakeLists.txt
cmake/: FindEvent.cmake  RobinUtility.cmake
core/: bindable.hh  buffer_receiver.cc  buffer_receiver.hh  buffer_sender.cc  buffer_sender.hh  codec.hh  frame.cc  frame.hh  frame_sender.hh  headers_frame.hh
initialization/: arguments.cc  arguments.hh  array.cc  array.hh  atomic.hh  boolean.cc  boolean.hh  boolean_builder.hh  compiler.cc  compiler.hh  evaluator.cc  evaluator.hh  lexer.cc  lexer.hh  lingual.cc  lingual.hh  lingual_builder.hh  null.cc  null.hh  null_builder.hh  numerical.cc  numerical.hh  numerical_builder.hh  object.cc  object.hh  object_builder.hh  processor.cc  processor.hh  reporter.cc  reporter.hh  serializer.cc  serializer.hh  value.cc  value.hh
json/: generate_simulation_signal.json  test_builder.json  test_evaluator.json  thesis_analyze_background.json  thesis_reconstruct.json
main/: echo.cc  robin.cc
math/: fourier.cc  fourier.hh  random.cc  random.hh  window.cc  window.hh  window_bartlett.cc  window_bartlett.hh  window_blackman.cc  window_blackman.hh  window_hamming.cc  window_hamming.hh  window_hanning.cc  window_hanning.hh  window_rectangular.cc  window_rectangular.hh  window_welch.cc  window_welch.hh
test/: test_ascii.cc  test_binary.cc  test_builder.cc  test_lexer_compiler_reporter.cc  test_lexer_compiler_serializer.cc  test_lexer_reporter.cc  test_lexer_serializer.cc  test_message.cc  test_thread.cc  test_typeat.cc  test_typechain.cc  test_typelength.cc
utility/: alignment.hh  allocator.hh  ascii.cc  ascii.hh  binary.cc  binary.hh  error.cc  error.hh  event.hh  initializer.hh  macros.hh  message.cc  message.hh  mutex.cc  mutex.hh  pointer.hh  pool.hh  singleton.hh  ssl.hh  thread.cc  thread.hh  typeat.hh  typebind.hh  typechain.hh  typeif.hh  typein.hh  typeint.hh  typelength.hh  typelist.hh  typenode.hh  typenull.hh
